8185734: [Windows] Structured Exception Catcher missing around gtest execution

Reviewed-by: dholmes, ihse